# amp-player

./: .gitignore  Makefile  README.md  invalidate-cloudfront-cache.sh  package-lock.json  serverless-compose.yml
api/: package-lock.json  package.json  pyproject.toml  serverless.yml
api/src/: amp.py  main.py  models.py
webui/: package-lock.json  package.json  serverless.yml
webui/public/: index.html
webui/public/js/: cowbell.min.js  openmpt.min.js
webui/src/: index.tsx  types.ts
webui/src/api/: api.ts
webui/src/components/: App.css  App.tsx  Artist.tsx  Player.tsx  Search.tsx
