[tool.poetry]
name = "amp-player"
version = "0.1.0"
description = ""
authors = ["gs11@github"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.2"
fastapi = "^0.92.0"
mangum = "^0.17.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
flake8 = "5.0.4"
isort = "5.10.1"
pyright = "^1.1.295"
types-requests = "2.28.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
profile = 'black'
