[tool.poetry]
name = "amp-player"
version = "0.1.0"
description = ""
authors = ["gs11 <gustav.sinder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
cloudscraper = "^1.2.71"
fastapi = "^0.111.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
profile = 'black'
